# swirl

./: .gitignore  README.md
server/: Cargo.toml  README.md
server/src/: config.rs  entities.rs  error.rs  main.rs
server/src/api/: error.rs  mod.rs  state.rs
server/src/api/models/: commit.rs  commit_list_item.rs  mod.rs  repo.rs  tree_entry.rs
server/src/api/routes/: mod.rs
server/src/api/routes/repos/: branches.rs  commits.rs  mod.rs  raw.rs
server/src/repository/: git.rs  mod.rs  soft_serve.rs
server/src/repository/models/: mod.rs  soft_serve.rs
server/src/service/: git.rs  mod.rs
web/: next.config.js  package-lock.json  package.json
web/components/: Aside.tsx  CommitDisplay.tsx  Error.tsx  FileList.tsx  FileViewer.tsx  Layout.tsx  Loading.tsx  Markdown.tsx  RepoLayout.tsx  RepoList.tsx
web/lib/: get-file-type.ts  get-host-props.ts  markdown-relative-to-absolute-image-path.ts  syntax-highlighting.ts
web/pages/: _app.tsx  _document.tsx  index.tsx
web/pages/[repo]/: index.tsx
web/pages/[repo]/commits/: [id].tsx  index.tsx
web/pages/[repo]/tree/: [[...path]].tsx
web/styles/: Aside.module.scss  CommitDisplay.module.scss  Commits.module.scss  Error.module.scss  FileList.module.scss  FileViewer.module.scss  Home.module.scss  Layout.module.scss  Loading.module.scss  Markdown.module.scss  Repo.module.scss  RepoLayout.module.scss  RepoList.module.scss  Tree.module.scss  globals.scss  variables.scss
web/types/: file-type.ts  preview-data.ts  repos.ts  tree.ts
