[package]
name = "swirl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.5", features = ["headers"] }
dirs = "4.0"
dotenv = "0.15.0"
git2 = "0.14"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
